Add tauri dependency with window-all feature
Signed-off-by: Shoaib Akhatar <55377721+shoaibakhatar@users.noreply.github.com>

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,3 +39,6 @@ default = ["custom-protocol"]
 # this feature is used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = ["tauri/custom-protocol"]
+
+[dependencies]
+   tauri = { version = "1.5", features = ["window-all"] }
